updating fix for too much shadows

--- a/components/LandingPage/subFolder/Projects.module.css
+++ b/components/LandingPage/subFolder/Projects.module.css
@@ -43,7 +43,7 @@
     height:fit-content;
     width: 100%;
     border-radius: 20px;
-    box-shadow: 1px 1px 5px black;
+    box-shadow: 1px 1px 5px rgb(119, 119, 119);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -53,7 +53,7 @@
     height:fit-content;
     width: 100%;
     border-radius: 20px;
-    box-shadow: 0.5px 0.5px 8px black;
+    box-shadow: 1px 1px 5px rgb(119, 119, 119);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
